# aoc_helper

./: CMakeLists.txt
includes/aoch/: AOCSolutionTypes.hpp  AOCSolutionsManager.hpp  fileio.hpp  math.hpp  math.tpp  string.hpp
src/aoch/: AOCSolutionsManager.cpp  fileio.cpp  math.cpp  string.cpp
